// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/notifications.js should render itself (github.com with notifications) 1`] = `
<span>
  <div
    className="account p-2"
  >
    github.com
    <span
      className="octicon octicon-check ml-2"
      onClick={[Function]}
      title="Mark All as Read"
    />
  </div>
</span>
`;

exports[`components/notifications.js should render itself (github.com without notifications) 1`] = `
<span>
  <div
    className="account p-2"
  >
    github.com
    <span
      className="octicon octicon-chevron-left ml-2"
    />
  </div>
</span>
`;
